/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
	application
	id("buildlogic.java-application-conventions")
}


dependencies {
	implementation("org.apache.commons:commons-text")
	implementation(project(":utilities"))
}

application {
	// Define the main class for the application.
	mainClass.set("org.tictactoe.app.App")
}

tasks.jar {
	manifest {
		attributes["Main-Class"] = application.mainClass.get()
	}
}


java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(17))
	}
}


